--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,4 +1,6 @@
 ---
+import { SiteConfig } from '../siteconfig'
+
 export interface Props {
   title: string
 }
@@ -25,7 +27,7 @@ const { title } = Astro.props
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <meta name="description" content="Minimal Astro starter" />
+    <meta name="description" content={SiteConfig.description} />
   </head>
   <body>
     <slot />
